🌃🌉 Checkpoint ./src/App.css:22400771/264 ./index.html:22400771/125

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ITP Visual Journalism Fall 2023 - Week 3</title>
+    <title> ๋˚ ༘ ⋆｡˚  ੈ ⋆.ೃ࿔*:･ 𓏲 ๋࣭  ࣪ ˖𝓼𝓹𝓮𝓬𝓲𝓮𝓼 𝓸𝓯 𝓻𝓸𝓸𝓶✧˚ ༘ ⋆｡˚  ੈ✩‧₊₊˚⊹♡ ౨ৎ⋆ ˚｡⋆</title>
   </head>
   <body>
 
